--- a/create_namespace.yml
+++ b/create_namespace.yml
@@ -7,6 +7,6 @@
   tasks:
     - name: Create the namespace
       azure_rm_servicebus:
-        resource_group: "{{ resource_group }}"
+    #    resource_group: "{{ resource_group }}"
         name: "{{ namespacens }}"
         location: "{{ location }}"
